Fix Blurred Image

--- a/style.css
+++ b/style.css
@@ -951,19 +951,33 @@ GALLERY
 
 .gallery-item img{
 
+    display:block;
+
     width:100%;
 
     height:100%;
 
     object-fit:cover;
 
-    transition:1s;
+    object-position:center;
+
+    transform:translateZ(0);
+
+    -webkit-transform:translateZ(0);
+
+    backface-visibility:hidden;
+
+    -webkit-backface-visibility:hidden;
+
+    image-rendering:auto;
+
+    transition:transform .6s ease;
 
 }
 
 .gallery-item:hover img{
 
-    transform:scale(1.08);
+    transform:translateZ(0) scale(1.08);
 
 }
 
